--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-﻿
-APScheduler==3.10.4  
+﻿APScheduler==3.10.4  
 django-ipware==6.0.3
-cloudinary==1.26.0
+cloudinary==1.40.0
 django-cloudinary-storage==0.3.0
 python-ipware==2.0.1
 django-htmx==1.5.0
@@ -157,7 +156,6 @@ Werkzeug==2.3.6
 widgetsnbextension==4.0.8
 wikipedia==1.4.0
 xhtml2pdf==0.2.11
-
 psycopg==3.1.12
 psycopg2==2.9.9
  
